css/style.css
.container {
  max-width: 960px;
}

.game-header {
  max-width: 700px;
}

.card:hover {
  color: white;
}
.card:hover .card-header {
  background-color: #0275d8;
}
.card:hover div.card-body {
  border: #0275d8 1px solid;
}
.card img {
  max-width: 100%;
}
#reset-button {
  margin: 0 auto;
  max-width: 250px;
}

@media (max-width: 455px) {
  div.card-header {
    display: none;
  }
  div.card-body button {
    display: none;
  }
}

@media (max-width: 340px) {
  #stats {
    display: flex;
    flex-direction: column;
  }
}

